docs: documentation route put product id
add all documentation with swagger about route update product id, that update a product name by its id
